Update README.md to document XML literals (fixes #88)